# kanjida

./: .gitignore  .gitmodules  Cargo.toml  README.md  index.html
assets/: MPLUSRounded1cBoldKana-msdf.json  NanumGothicCodingNonKanji1024-msdf.json  NanumGothicCodingWithXmpls-msdf.json  README.md  Ubuntu Mono_Regular_Digits.json  kanjialive-msdf.json  kanjialive.fnt  kanjialive_01_08-msdf.json  mplus-1m-light_1m-light.json  onyofirsts-msdf.json  onyonanum-msdf.json  updated-shader.js
assets/typeface/: OsakaRegularMonoEnJa.json  OsakaRegularMonoEnJaRestrictedReversed.json
bmfont/: README.md  kanjialive.txt
cloudflare/: _headers
js/: rust_systems.js
src/: components.rs  hexgrid.rs  js_sys_ex.rs  load.rs  main.rs  more_aframe.rs  queries.rs  run.rs
src/aframe_ex/: af_sys.rs  mod.rs  scene_entity_bindgen.rs  schema.rs
src/aframe_ex/components/: align_component.rs  anchor_component.rs  animation_component.rs  baseline_component.rs  cursor_component.rs  font_component.rs  geometry_component.rs  laser_controls_component.rs  material.rs  material_component.rs  mod.rs  oculus_touch_controls_component.rs  raycaster_component.rs  renderer_component.rs  ring_geometry_component.rs  source_component.rs  stats_component.rs  text_component.rs  value_component.rs  visible_component.rs
src/aframe_ex/events/: mod.rs
src/aframe_ex/geometries/: cylinder_geometry.rs  mod.rs
src/aframe_ex/js/: mod.rs
src/aframe_ex/objects/: mod.rs
src/aframe_ex/scenes/: core.rs  mod.rs
src/aframe_ex/schema/: fields.rs  mod.rs  multi_property.rs  properties.rs  settings.rs  single_property.rs
src/aframe_ex/systems/: mod.rs
src/components/: collider_check_component.rs  hex_color_component.rs  hexcell_component.rs  hexgrid_component.rs  laserfocus_component.rs  mod.rs
src/components/hexcell_component/: attribute.rs  data.rs  handlers.rs  mod.rs
src/components/hexgrid_component/: handlers.rs  mod.rs  other.rs  registration.rs
src/ecs/: fonts.rs  mod.rs
src/entities/: camera_entity.rs  chest_entity.rs  controller_entity.rs  ground_entity.rs  hexgrid_entity.rs  hint_entity.rs  light_entity.rs  meaning_entity.rs  mod.rs  origin_entity.rs  sky_entity.rs
src/game/: answer_state.rs  game.rs  game_material.rs  game_state.rs  game_view.rs  mod.rs  quiz.rs  quiz_state.rs  records.rs
src/js_sys_ex/: mod.rs
src/ka/: mod.rs
src/queries/: mod.rs
src/systems/: cell_selection_system.rs  hexcell_system.rs  mod.rs
src/three_sys/: color.rs  geometry.rs  loaders.rs  material.rs  mesh.rs  mod.rs  object3d.rs  vector.rs
src/views/: mod.rs  settings.rs  yomi_data.rs
(+68 files in other folders)
