[package]
name = "kanjida"
version = "0.1.0"
edition = "2021"

[dependencies]
aframers = { git = "https://github.com/wehjin/aframers.git", version = "0.1.0" }
anyhow = "1.0.86"
console_error_panic_hook = "0.1.7"
csv = "1.3.0"
getrandom = { version = "0.2.15", features = ["js"] }
rand = { version = "0.8.5" }
serde = { version = "1.0.203", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["Window", "Document", "HtmlElement", "Text"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
