[package]
name = "kanjida"
version = "0.1.0"
edition = "2021"

[dependencies]
aframers = { git = "https://github.com/wehjin/aframers.git", version = "0.1.0" }
anyhow = "1.0.86"
bundle_sys = { git = "https://github.com/wehjin/bundle_sys.git", version = "0.1.0" }
chrono = { version = "0.4.38", features = ["serde"] }
console_error_panic_hook = "0.1.7"
csv = "1.3.0"
getrandom = { version = "0.2.15", features = ["js"] }
hexgrid = { git = "https://github.com/wehjin/hexgrid.git", version = "0.1.0" }
kanji-data = { git = "https://github.com/wehjin/kanji-data.git", version = "0.1.0" }
rand = { version = "0.8.5" }
serde = { version = "1.0.203", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.128"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = [
    "CanvasRenderingContext2d",
    "CustomEvent",
    "Document",
    "Element",
    "Event",
    "HtmlBodyElement",
    "HtmlCanvasElement",
    "HtmlDocument",
    "HtmlElement",
    "HtmlImageElement",
    "Node",
    "Storage",
    "Text",
    "Window",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
